2008-9-9  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-01
    * First release!