@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.02-02.01
-Date: 2008-9-26
+Version: 0.02-02.02
+Date: 2008-10-6
 Title: mi Package
 Author: 
   Andrew Gelman <gelman@stat.columbia.edu>,
