@@ -1,17 +1,34 @@
 # ==============================================================================
 # extract coefficient values for mi.method class object
 # ==============================================================================
-setMethod( "coef", signature( object = "mi.method" ),     
-  function ( object, ... ) {
-    return( object$model$coefficient )
-  }
-) 
+
+coef.mi.method <- function(object, ...){
+  object$model$coefficient
+}
+  
+#
+#setMethod( "coef", signature( object = "mi.method" ),     
+#  function ( object, ... ) {
+#    return( object$model$coefficient )
+#  }
+#) 
+
+
+
 # ==============================================================================
 # extract coefficient values for mi.mixed class object
 # ==============================================================================
-setMethod("coef", signature(object = "mi.mixed"),     
-  function ( object ) {
-    return( list( object$model$model.1$coefficient, 
-                    object$model$model.2$coefficient ) );
-  }
-)
+
+
+coef.mi.mixed <- function(object, ...){
+  return( list( object$model$model.1$coefficient, 
+                object$model$model.2$coefficient ) )
+}
+
+
+#setMethod("coef", signature(object = "mi.mixed"),     
+#  function ( object ) {
+#    return( list( object$model$model.1$coefficient, 
+#                    object$model$model.2$coefficient ) )
+#  }
+#)
