@@ -28,7 +28,7 @@
 % methods
 \alias{mi,mi-method}
 \alias{show,mi-method}
-\alias{plot,mi,missing-method}
+%\alias{plot.mi}
 \title{ Multiple Iterative Regression Imputation }
 \description{
  Produce a multiple imputed matrix applying the elementary functions iteratively 
@@ -43,7 +43,7 @@ mi( object, info, type = NULL, n.imp = 3, n.iter = 30,
     seed = NA, check.coef.convergence = FALSE) 
 
 %\S4method{mi}{mi}(object, \dots)
-\S4method{plot}{mi,missing}( x, y, \dots )
+%\S3method{plot}{mi}(x, \dots )
 
 }
 %- maybe also 'usage' for other objects documented here.
@@ -59,8 +59,8 @@ mi( object, info, type = NULL, n.imp = 3, n.iter = 30,
   \item{preprocess}{ Preprocess the data according to the info matrix. }
   \item{continue.on.convergence}{ If set to TRUE the mi will run until maximum iteration is reached or maximum minutes pass. }
   \item{check.coef.convergence}{default = FALSE}
-  \item{x}{An object of a class '"mi"'.}
-  \item{y}{currently not used.}
+%  \item{x}{An object of a class '"mi"'.}
+%  \item{y}{currently not used.}
   \item{\dots}{options for plot.mi.}
   
 }
