@@ -1,3 +1,8 @@
+2008-10-6  Yu-Sung Su     <ys463@columbia.edu>  
+    * DESCRIPTION (Version, Date): 0.02-02
+    * reverse S4 coef methods back to S3 to pass R check
+    * reverse S4 plot methods back to S3 to pass R check
+
 2008-9-9  Yu-Sung Su     <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 0.02-01
     * First release!
